# advent-of-code

./: .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  dev-note.txt  env.d.ts  index.ts  install.sh  package.json  pytest.ini  requirements.txt  setup.py  tsconfig.json  vitest.workspace.ts
challenges/2023/: README.md
challenges/2023/1/: README.md  notes.tex
challenges/2023/10/: README.md  notes.tex
challenges/2023/11/: README.md  notes.tex
challenges/2023/12/: README.md  notes.tex
challenges/2023/13/: README.md  notes.tex
challenges/2023/14/: README.md  notes.tex
challenges/2023/15/: README.md  notes.tex
challenges/2023/16/: README.md  notes.tex
challenges/2023/17/: README.md  notes.tex
challenges/2023/18/: README.md  notes.tex
challenges/2023/19/: README.md  notes.tex
challenges/2023/2/: README.md  notes.tex
challenges/2023/20/: README.md  notes.tex
challenges/2023/21/: README.md  notes.tex
challenges/2023/22/: README.md  notes.tex
challenges/2023/23/: README.md  notes.tex
challenges/2023/24/: README.md  notes.tex
challenges/2023/25/: README.md  notes.tex
challenges/2023/3/: README.md  notes.tex
challenges/2023/4/: README.md  notes.tex
challenges/2023/5/: README.md  notes.tex
challenges/2023/6/: README.md  notes.tex
challenges/2023/7/: README.md  notes.tex
challenges/2023/7/rs/: Cargo.toml
challenges/2023/8/: README.md  notes.tex
challenges/2023/9/: README.md  (+1 more)
challenges/2024/: README.md
challenges/2025/: README.md
scripts/: index.ts  kebab.ts  note.ts  run.ts  start.ts  update-readme.ts
template/py/: index.py
template/rs/: Cargo.toml  index.rs
template/ts/: index.ts
test/python/: logs.py  runtime.py
test/rust/: runtime.rs
test/typescript/: runtime.test.ts  runtime.ts
utils/: aoc-actions.ts  get-input.ts  getInput.ts
utils/rust/: mod.rs  searching.rs  sorting.rs
utils/typescript/: index.test.ts  index.ts
(+233 files in other folders)
