[workspace]
members = [
"challenges/2023/1/rs",
  "challenges/2023/10/rs",
  "challenges/2023/11/rs",
  "challenges/2023/12/rs",
  "challenges/2023/13/rs",
  "challenges/2023/14/rs",
  "challenges/2023/15/rs",
  "challenges/2023/16/rs",
  "challenges/2023/17/rs",
  "challenges/2023/18/rs",
  "challenges/2023/19/rs",
  "challenges/2023/2/rs",
  "challenges/2023/20/rs",
  "challenges/2023/21/rs",
  "challenges/2023/22/rs",
  "challenges/2023/23/rs",
  "challenges/2023/24/rs",
  "challenges/2023/25/rs",
  "challenges/2023/3/rs",
  "challenges/2023/4/rs",
  "challenges/2023/5/rs",
  "challenges/2023/6/rs",
  "challenges/2023/7/rs",
  "challenges/2023/8/rs",
  "challenges/2023/9/rs",
  "challenges/2024/1/rs",
  "challenges/2024/10/rs",
  "challenges/2024/11/rs",
  "challenges/2024/12/rs",
  "challenges/2024/13/rs",
  "challenges/2024/14/rs",
  "challenges/2024/15/rs",
  "challenges/2024/16/rs",
  "challenges/2024/17/rs",
  "challenges/2024/18/rs",
  "challenges/2024/19/rs",
  "challenges/2024/2/rs",
  "challenges/2024/20/rs",
  "challenges/2024/21/rs",
  "challenges/2024/22/rs",
  "challenges/2024/23/rs",
  "challenges/2024/24/rs",
  "challenges/2024/25/rs",
  "challenges/2024/3/rs",
  "challenges/2024/4/rs",
  "challenges/2024/5/rs",
  "challenges/2024/6/rs",
  "challenges/2024/7/rs",
  "challenges/2024/8/rs",
  "challenges/2024/9/rs"
]